@@ -1,6 +1,8 @@
 ChangeLog 
 ==========
 
+- call bam_flagstats autoqc check via the qc script
+
 release 3.0
 - make adjustments for composition-based bamflagstats autoqc result object
 - use factory for creating compositions
